[package]
name = "fixed-codec-derive"
version = "0.1.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta-utils"
license = "MIT"
description = "Muta fixed codec derive procedural macros."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
bytes = "0.5"
rand = "0.7"
rlp = "0.4"
muta-protocol = "0.1.0-alpha.1" 
