[package]
name = "muta-apm-derive"
version = "0.1.0-alpha.2"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
license = "MIT"
description = "Muta tracing procedural macros."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
