[package]
name = "muta-apm"
version = "0.1.0-alpha.5"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
license = "MIT"
description = "Muta application performance monitor."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
lazy_static = "1.4"
parking_lot = "0.10"
rustracing = "0.4"
rustracing_jaeger = "0.4"
muta-apm-derive = "0.1.0-alpha.5"
log = "0.4"

[dev-dependencies]
async-trait = "0.1"
bytes = "0.5"
creep = "0.2"
crossbeam-channel = "0.4"
lazy_static = "1.4"
overlord = "0.2.0-alpha.11"
rustracing = "0.4"
rustracing_jaeger = "0.4"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
