[package]
name = "muta-apm"
version = "0.1.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2021"
license = "MIT"
description = "Muta application performance monitor."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
lazy_static = "1.4"
parking_lot = "0.11"
rustracing = "0.5"
rustracing_jaeger = "0.7"
muta-apm-derive = "0.1"
log = "0.4"
creep = "0.2"

[dev-dependencies]
async-trait = "0.1"
bytes = "1.1"
lazy_static = "1.4"
tokio = { version = "1.14", features = ["macros", "rt"] }
muta-protocol = { git = "https://github.com/nervosnetwork/muta.git", rev = "49474fd" } 
